@@ -201,6 +201,7 @@ EOF
 ## libkres API
 ${CDEFS} ${LIBKRES} functions <<-EOF
 # Resolution request
+	kr_request_ensure_edns
 	kr_request_ensure_answer
 	kr_resolve_plan
 	kr_resolve_pool
