@@ -879,6 +879,11 @@ ffi.metatype( kr_request_t, {
 			req.vars_ref = ref
 			return var
 		end,
+		-- Ensure that answer has EDNS if needed; can't fail.
+		ensure_edns = function (req)
+			assert(ffi.istype(kr_request_t, req))
+			return C.kr_request_ensure_edns(req)
+		end,
 		-- Ensure that answer exists and return it; can't fail.
 		ensure_answer = function (req)
 			assert(ffi.istype(kr_request_t, req))
