@@ -5,6 +5,7 @@ Bugfixes
 --------
 - policy.rpz: improve logs, fix origin detection in files without $ORIGIN
 - lua: log() works again; broken in 5.4.2 (!1223)
+- policy: correctly include EDNS0 previously omitted by some actions (!1230)
 
 
 Knot Resolver 5.4.2 (2021-10-13)
